tests/ui/borrowck/opaque-types-deadcode.stderr
error: undefined opaque type
  --> $DIR/opaque-types-deadcode.rs:26:25
   |
LL | fn foo<'a, 'b: 'a>() -> impl CallMeMaybe<'a, 'b> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^

error: {type error}
  --> $DIR/opaque-types-deadcode.rs:26:25
   |
LL | fn foo<'a, 'b: 'a>() -> impl CallMeMaybe<'a, 'b> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

